2009-03-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/CMakeLists.txt: check for minimum swig version;
	patch from Alexis Maldonado.

	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: make
	semaphore failures more visible.

2009-02-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/SemaphoreTest.cpp: add a basic test
	for semaphore functionality.  Seem to be having difficulties
	with the ACE version packaged on Ubuntu 8.10.

2009-02-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: Fix based on patch submitted
	by dantard for YARP Bug 2526259: "Locale settings influence YARP
	behavior".  Serialization of decimal point in string versions
	of Bottle format didn't work right when the local decimal point
	was not a "."

2009-02-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/Drivers.cpp: D'oh! ACE String::strstr
	function now returns unsigned ints, so a filter for an unwanted
	option was always returning true.  "yarpdev --device foo --verbose"
	now works again.  Thanks to Frank Forster for reporting this
	problem.

	* src/libYARP_dev/harness/PolyDriverTest.cpp: regression test
	for drivers reporting options ("yarpdev --device foo --verbose" is
	currently not reporting options correctly).

2009-02-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NetType.cpp: improve text-mode continuation
	across line breaks.

	* src/libYARP_OS/src/Property.cpp: fix bugs in variable expansion,
	continuation across line breaks.

	* src/libYARP_OS/harness/PropertyTest.cpp: add better regression 
	tests for variable expansion, continuation across line breaks.

2009-01-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/port_power/ex0402_port_callback_reply.cpp: add return
	value to read method (thanks Arnaud Degroote!)
	
2009-01-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreOutputUnit.cpp: when a message fails