@@ -35,7 +35,7 @@ void FallbackNameServer::run() {
         YARP_DEBUG(Logger::get(),"Fallback server got something");
         if (listen.isOk()&&!closed) {
             YARP_DEBUG(Logger::get(),String("Fallback server got ") + msg);
-            if (msg.strstr("NAME_SERVER ") == 0) {
+            if (YARP_STRSTR(msg,"NAME_SERVER ") == 0) {
                 String result = owner.apply(msg);
                 //Bytes b((char*)(result.c_str()),result.length());
                 send.beginPacket();
